# projet-mangetamain

./: .gitignore  README.md  license.txt  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
classes/: classes.py
docs/: objects.inv  searchindex.js
docs/_modules/: index.html
docs/_modules/src/: data_loader.html  filter.html  main.html  metrics.html
docs/_modules/src/visualization/: dashboard.html  front_page.html  sidebar.html
docs/source/: conf.py  index.rst  src.visualization.rst
src/: algo_clustering.py  data_loader.py  filter.py  graphs.py  log_config.py  main.py  metrics.py  nutrition_stats.py  pca.py  utils.py
src/models/: algorithm.py
src/models/clustering/: base.py  clustering_algo.py
src/models/regression/: base.py  linear_regression.py
src/visualisation/: __init__.py  graphs.py  graphs_nutrition.py  top10_hottest_recipes.txt
src/visualization/: charts.py  dashboard.py  front_page.py  sidebar.py
tests/: test_algo_clustering.py  test_data_loader.py  test_filter.py  test_log_config.py  test_metrics.py  test_nutrition_stats.py  test_utils.py
tests/models/: __init__.py  test_algorithm.py
tests/models/regression/: test_base.py  test_linear_regression.py
tests/visualisation/: test_graphs.py  test_graphs_nutrition.py
tests/visualization/: test_charts.py  test_dashboard.py  test_front_page.py  test_sidebar.py
