[tool.poetry]
name = "projet-mangetamain"
version = "0.1.0"
description = ""
authors = ["Mathieu Delarue <mat.delarue@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
streamlit = "^1.39.0"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
