[tool.poetry]
name = "projet-mangetamain"
version = "0.1.0"
description = ""
authors = ["Mathieu Delarue <mat.delarue@hotmail.fr>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
streamlit = "^1.39.0"
scikit-learn = "^1.5.2"
numpy = "^2.1.2"
plotly = "^5.24.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.0.2"
flake8 = "^7.1.1"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["src/main.py"]

[tool.black]
line-length = 88
